# iamb0ttle.github.io

./: .gitignore  Makefile  archives.html  authors.html  index.html  pelicanconf.py  pyproject.toml  robots.txt  seo_report.html  sitemap.xml  tags.html
archive/: index.html
categories/: index.html
category/review/: index.html
content/: keyboard-review.md
feeds/: all.atom.xml
output/: archives.html  authors.html  categories.html  index.html  my-first-review.html  tags.html
output/assets/css/: custom_styles.css
output/author/: nbhyun0329gmailcom.html
output/categories/: index.html
output/tag/: index.html
