[project]
name = "iamb0ttle-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "iamb0ttle",email = "nbhyun0329@gmail.com"}
]
readme = "README.md"
requires-python = "3.9.6"
dependencies = [
    "pelican[markdown] (>=4.11.0,<5.0.0)",
    "attila @ git+https://github.com/arulrajnet/attila.git@master",
    "pelican-minify (>=2.0.0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "iamb0ttle"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
